# test_repo

./: README.md  plot_style.mlpstyle  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-report.yml
notebooks/: __setup.py  exploratory_analysis.ipynb
report/: report.tex
src/: __init__.py  project_configs.py
