[project]
name = "my_statistical_project"
version = "0.1.0"
description = "A statistical analysis project."
authors = [
    { name = "Giuseppe Minardi", email = "GiuseppeMinardi@gmail.com" },
]
readme = "README.md"
keywords = ["statistics", "analysis", "data-science"]

requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymc>=5.25.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "tqdm>=4.67.1",
]
